--- a/HTML/Paragrafen+Semantics/opdracht onderdeel 1.html
+++ b/HTML/Paragrafen+Semantics/opdracht onderdeel 1.html
@@ -6,7 +6,7 @@
     <title>Mijn eerste website</title>
 </head>
 <body>
-    
+    <img src="https://techgrounds.nl/static/media/TG_Logo.d5934b2d.png" alt="Techgrounds logo" height="50px">
     <h1>Mijn eerste website</h1>
 
         <h3>Mijn eerste sub-kop</h3>
@@ -20,8 +20,9 @@
 
 <footer>
     <h3>Footer</h3>
-    <p>Deze website is gebouwd door <a href="https://techgrounds.nl/" target="_blank" type="text/html" lang="nl" >Techgrounds Academy</a></p> 
-
+    <p>Deze website is gebouwd door <a href="https://techgrounds.nl/" target="_blank" type="text/html" lang="nl" >Techgrounds Academy</a> 
+    <img src="https://techgrounds.nl/static/media/TG_Logo.d5934b2d.png" alt="Techgrounds logo" height="20px"></p>
+    <!-- bij een relatief path link moet de afbeelding zelf worden gehost -->
 </footer>
 </body>
 </html>
