--- a/HTML/Eindopdracht/Tweede website/website_2-1.html
+++ b/HTML/Eindopdracht/Tweede website/website_2-1.html
@@ -21,22 +21,21 @@
             display: flex;
             justify-content: center;
             list-style-type: none;
+            margin: 50px;
         }
 
-        ul li {
+        ul li a {
             background-color: cornflowerblue;
             color: white;
-
             border-radius: 10px;
             padding: 0.8em;
             margin: 15px;
             font-weight: bold;
         }
 
-        ul li:hover {
+        ul li a:hover {
             background-color: cornflowerblue;
             color: rgb(235, 229, 229);
-
             border-radius: 10px;
             padding: 0.8em;
             margin: 15px;
@@ -129,8 +128,8 @@
 
     <nav>
         <ul>
-            <li><a href="#"></a>Home</li>
-            <li><a href="#"></a>Members</li>
+            <li><a href="./website_2-1.html">Home</a></li>
+            <li><a href="./website_2-2.html">Members</a></li>
         </ul>
     </nav>
 
