--- a/HTML/Eindopdracht/Tweede website/website_2-2.html
+++ b/HTML/Eindopdracht/Tweede website/website_2-2.html
@@ -13,6 +13,35 @@ body {
 
     }
 
+ul{
+        display: flex;
+        justify-content: center;
+        list-style-type: none;
+        margin: 50px;
+    }
+
+ul li a {
+    background-color: cornflowerblue;
+    color: white;
+    border-radius: 10px;
+    padding: 0.8em;
+    margin: 15px;
+    font-weight: bold;
+}
+
+ul li a:hover {
+    background-color: cornflowerblue;
+    color: rgb(235, 229, 229);
+    border-radius: 10px;
+    padding: 0.8em;
+    margin: 15px;
+    font-weight: bold;
+}
+
+a{
+
+text-decoration: none;
+}
 
 table{
 
@@ -76,6 +105,18 @@ input{
 
 </head>
 <body>
+
+    <nav>
+        <ul>
+            <li><a href="./website_2-1.html">Home</a></li>
+            <li><a href="./website_2-2.html">Members</a></li>
+        </ul>
+    </nav>
+
+
+
+
+
     <div>
         <h1>Members</h1>
         <table>
