--- a/CSS/5. Flexbox/Flexbox.html
+++ b/CSS/5. Flexbox/Flexbox.html
@@ -4,6 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flexbox</title>
+
+<style>
+            html, body {
+        background:linen;
+        margin: 5em;    
+        scroll-behavior: smooth;
+       
+        }
+
+        li{
+        list-style-type: none;
+        padding: 1em;
+        }
+
+        dt{
+            font-weight: bolder;
+        }
+        dd {
+
+            font-style: italic;
+        }
+
+
+</style>
+
+
 </head>
 <body>
     
