--- a/CSS/Index-CSS-Assignments.html
+++ b/CSS/Index-CSS-Assignments.html
@@ -25,9 +25,9 @@
 
     <nav>
         <ul>
-            <li><a href="./1. Selectors & Visual/">Selectors & Visual rules</a></li>
-            <li><a href="./2. Box-model /Box-model.html">Box-model</a></li>
-            <li><a href="./3. Display & positioning/Display & positioning.html">Display & positioning</a></li>
+            <li><a href="./1. Selectors & Visual/Selectors & Visual.html">Selectors & Visual rules</a></li>
+            <li><a href="./2. Box Model/Box_model.html">Box-model</a></li>
+            <li><a href="./3. Display_and_positioning/Display_&_positioning.html">Display & positioning</a></li>
             <li><a href="./4. Pseudo elements/Pseudo elements.html">Pseudo elements</a></li>
             <li><a href="./5. Flexbox/Flexbox.html">Flexbox</a></li>
             <li><a href="./6. Transitions/Transitions.html">Transitions</a></li>
