--- a/CSS/2. Box Model/Box_model.html
+++ b/CSS/2. Box Model/Box_model.html
@@ -153,7 +153,7 @@
     <div style="background:lightgray; box-sizing: border-box; width: 100px; height: 100px; margin: 5px; padding: 5px; border:5px solid black; ">Dit is de content</div>
     <br>
     <dt>Hoe breed is de box? Hoe hoog is de box? Wat merk je op met width en height?</dt>
-    <dd>De totale hoogte en breedte is 100+5+5+5=115px.
+    <dd>De totale hoogte en breedte is 100+5+5+5+5=120px.
         De opgegeven width en height zijn dus niet absoluut, de waardes van padding, margin enz komen hier nog bij.
     </dd>
 
@@ -185,6 +185,9 @@
     </div>
     <br><br><hr><br><br>
 
+
+    <div style="background: coral; width: 100px; height: 100px;  margin-block-end: 100px;"></div>
+    <div style="background: red; width: 100px; height: 100px; margin-block-end: 100px;"></div>
 
 
 </body>
