--- a/CSS/3. Display_and_positioning/Display_&_positioning.html
+++ b/CSS/3. Display_and_positioning/Display_&_positioning.html
@@ -71,12 +71,14 @@
         <br>
         <ol>
             <li>Static: (default value van position) hier heeft het element de "normale" positie</li>
-            <li>Relative: Hier kun je nog extra waardes meegeven met top, right, bottom en left, <i>relatief aan de orginele positie.</i> 
+            <li>Relative: The element is positioned relative to its first positioned (not static) ancestor element</i> 
                 Dit veranderd niet de positie van elementen hier om heen.</li>
             <li>Absolute: Hier kun je het element relatief positioneren tenopzichte van het parent
                 element doormiddel van top, right, bottom en left.</li>
             <li>Fixed: Hiermee positioneer je het element ten opzichte van de viewport, ofwel de browser window. </li>
-            <li>Sticky: Hiermee positioneer je een element ten opzichte van zijn dicht bij zijnde parent (relative)
+            <li>Sticky: The element is positioned based on the user's scroll position
+                A sticky element toggles between relative and fixed, depending on the scroll position. It is positioned relative until a given offset position is met in the viewport - then it "sticks" in place (like position:fixed).
+                Hiermee positioneer je een element ten opzichte van zijn dicht bij zijnde parent (relative)
                 met top, right, bottom en left. Dan blijft het plakken bij zijn dicht bij zijnde parent in een fixed positie.
                 Zie het navigatie menu in op deze pagina.</li>
         </ol>
@@ -201,11 +203,11 @@
     <dd></dd>
     <br>
 
-    <div style="border:1px solid black; position: relative;">
-        <!-- <div style="position: absolute; top: 250px; background: yellow; width: 100%; padding: 15px;"></div> -->
-        <div style="position: absolute; top: 100px; background: yellow; width: 12%; padding: 5px;"><h1>The sky is the limit!</h1></div>
+    <div style="border:1px solid black; position: relative;  z-index: 1 ">
+        <div style="position: absolute; top: 250px; z-index: -1 ;background: yellow; width: 100%; padding: 15px;"></div>
+        <div style="position: absolute; top: 100px; ; background: yellow; width: 75%; padding-left: 50px;"><h1>The sky is the limit!</h1></div>
         <div style="position: absolute; top: 200px; background: white; opacity: 0.5; width: max-content; padding: 0.15em; margin: 5px 0 0 10px;"><p>Skiing in the France Alpes</p></div>
-        <img style="" src="./img/france-ski-resorts-meribel-skier-on-mountain-top.jpg" alt="">
+        <img style="position: absolute z-index: 2;" src="./img/france-ski-resorts-meribel-skier-on-mountain-top.jpg" alt="">
 
     </div>
 
