--- a/CSS/4. Pseudo elements/Pseudo elements.html
+++ b/CSS/4. Pseudo elements/Pseudo elements.html
@@ -111,7 +111,8 @@
     }
 
     .opdracht6 .outer_box{
-        /* display: flex; */
+        /* display: flex;
+        justify-content: center; */
         position: relative;
         height: 200px;
         border: 2px solid gray;
