--- a/CSS/5. Flexbox/Flexbox.html
+++ b/CSS/5. Flexbox/Flexbox.html
@@ -147,9 +147,9 @@
             padding: 1em;
         }
 
-        .item1{ background: rgb(57, 87, 105);}
-        .item2{ background: chartreuse;}
-        .item3{background: rgb(57, 87, 105);}
+        .opdracht6 .item1{ background: rgb(57, 87, 105);}
+        .opdracht6 .item2{ background: chartreuse;}
+        .opdracht6 .item3{background: rgb(57, 87, 105);}
 
         .opdracht6 .box1 .item1{ flex-grow: 1;}
         .opdracht6 .box1 .item2{ flex: none;}
@@ -170,12 +170,15 @@
         .opdracht6 .box6 .item2{ flex: 4;}
 
 
+
+        .opdracht7 .item1{ background: rgb(57, 87, 105);}
+        .opdracht7 .item2{ background: chartreuse;}
+        .opdracht7 .item3{ background: rgb(57, 87, 105);}
+
         .opdracht7 {
             display: flex;
             background-color: lightyellow;
-            /* padding: 3em 0; */
             height: 40vh;
-            /* flex-direction: column; */
         }
 
         .opdracht7 .box{
@@ -244,6 +247,52 @@ flex: none; */
    flex: initial;
    flex: unset; */
 
+        .opdracht8{
+            display: flex;
+            /* flex-direction: column; */
+            flex-wrap: wrap;
+            border: 1px solid lightgrey;
+            width: fit-content;
+        }
+
+        .opdracht8 .box {
+            padding: 2em;
+            border: 1px solid gray;
+            border-radius: 1em;
+            text-align: center;
+            font-size: 2em;
+        }
+
+        .opdracht8 .box1 { background: lightyellow;}
+        .opdracht8 .box2 { background: lightblue;}
+        .opdracht8 .box3 { background: lightgreen;}
+        .opdracht8 .box4 { background: lightgrey;}
+        .opdracht8 .box5 { background: black; color: white;}
+        .opdracht8 .box6 { background-image: linear-gradient(to right,blue , lightblue);}
+
+
+        .opdracht9 {
+            display: flex;
+            flex-wrap: wrap;
+            /* flex-direction: column; */
+        }
+        .opdracht9 .box1, .opdracht9 .box2, .opdracht9 .box3, .opdracht9 .box4{
+            max-width:20vw;
+            min-width: 300px;
+            margin: 1em;
+            text-align: center;
+        }
+        .opdracht9 button{
+            width: 100%;
+            border: none;
+            padding: 20px 10px;
+            color: white;
+            background: blue;
+        
+        }
+
+
+        
 
 
 </style>
@@ -516,6 +565,14 @@ flex: none; */
     <dt>Zie het onderstaande voorbeeld en maak het na met flexbox.</dt>
     <dd></dd>
     <br>
+    <div class="opdracht8">
+            <div class="box box1">1</div>
+            <div class="box box2">2</div>
+            <div class="box box3">3</div>
+            <div class="box box4">4</div>
+            <div class="box box5">5</div>
+            <div class="box box6">6</div>
+    </div>
 
 
 
@@ -531,7 +588,30 @@ flex: none; */
     <dd></dd>
     <br>
 
-
+    <!-- div>.>div>.box$*4>div.item$*3 -->
+ 
+        <div class="opdracht9">
+                <div class="box1">
+                    <div class="item1"><img src="" alt=""></div>
+                    <div class="item2"><h2>Super Mario Run</h2><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus a omnis eius provident dignissimos cumque repellendus ipsam soluta esse ex! Quia debitis amet nobis placeat provident molestias enim optio deleniti?</p></div>
+                    <div class="item3"><button>Play Super Mario Run</button></div>
+                </div>
+                <div class="box2">
+                    <div class="item1"><img src="" alt=""></div>
+                    <div class="item2"><h2>Super Mario Maker</h2><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus a omnis eius provident dignissimos cumque repellendus ipsam soluta esse ex! Quia debitis amet nobis placeat provident molestias enim optio deleniti?</p></div>
+                    <div class="item3"><button>Play Super Mario Maker</button></div>
+                </div>
+                <div class="box3">
+                    <div class="item1"><img src="" alt=""></div>
+                    <div class="item2"><h2>Super Mario 3</h2><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus a omnis eius provident dignissimos cumque repellendus ipsam soluta esse ex! Quia debitis amet nobis placeat provident molestias enim optio deleniti?</p></div>
+                    <div class="item3"><button>Play Super Mario 3</button></div>
+                </div>
+                <div class="box4">
+                    <div class="item1"><img src="" alt=""></div>
+                    <div class="item2"><h2>Yoshi's Island</h2><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus a omnis eius provident dignissimos cumque repellendus ipsam soluta esse ex! Quia debitis amet nobis placeat provident molestias enim optio deleniti?</p></div>
+                    <div class="item3"><button>Play Yoshi's Island</button></div>
+                </div>
+            </div>
 
 
 
