--- a/CSS/7. Responsive/Responsive.html
+++ b/CSS/7. Responsive/Responsive.html
@@ -4,6 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive</title>
+    <style>
+        html, body {
+                background:linen;
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
+                margin: 2em 5em;    
+                scroll-behavior: smooth;
+            
+                }
+                nav{
+                    background:linen;
+                    position: sticky;
+                    top: -1px;
+                    width: 100%;
+                }
+
+                nav ul{
+                    display: flex;
+                    flex-wrap: wrap;
+                }
+
+                nav li{
+                list-style-type: none;
+                padding: 1em;
+                }
+
+                dt{
+                    font-weight: bolder;
+                }
+                dd {
+
+                    font-style: italic;
+                }
+
+
+    </style>
 </head>
 <body>
         
