--- a/CSS/6. Transitions/Transitions.html
+++ b/CSS/6. Transitions/Transitions.html
@@ -90,11 +90,14 @@
             transition-timing-function: ease-out;
             transition-duration:3s,2s;
             }
+
+            /* :nth-child(1) */
             .opdracht3:hover .box5{
             margin-left: 600px;
             background-color: red;
             transition-timing-function:linear;
             transition-duration:3s,1.5s;
+            transition-timing-function: cubic-bezier(.5, 2.9, .9, -1.9)
             }
 
 
