--- a/CSS/Eindopdracht/Italiaans Restaurant/italiaans_restaurant.html
+++ b/CSS/Eindopdracht/Italiaans Restaurant/italiaans_restaurant.html
@@ -35,19 +35,19 @@
             <div class="dishes-container">
                 <div class="dish">
                     <div><img src="./img/dish.jpg" alt="pasta"></div> 
-                    <div class="item-header"><h3>Pasta</h3><p>8.99</p></div>
+                    <div class="item-header"><h3>Pasta</h3><p>€8.99</p></div>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                     <p class="show">show...</p>
                 </div>
                 <div class="dish">
                     <div><img src="./img/dish.jpg" alt="pasta"></div>
-                    <div class="item-header"><h3>Pasta</h3><p>8.99</p></div>
+                    <div class="item-header"><h3>Pasta</h3><p>€8.99</p></div>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                     <p class="show">show...</p>
                 </div>
                 <div class="dish">
                     <div><img src="./img/dish.jpg" alt="pasta"></div>
-                    <div class="item-header"><h3>Pasta</h3><p>8.99</p></div>
+                    <div class="item-header"><h3>Pasta</h3><p>€8.99</p></div>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                     <p class="show">show...</p>
                 </div>
@@ -64,39 +64,39 @@
             
             <div class="menus">
                 <div class="menu">
-                    <div class="item-header"><h3>Pasta</h3><p>8.99</p></div>
+                    <div class="item-header"><h3>Pasta</h3><p>€8.99</p></div>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 </div>
                 <div class="menu">
-                    <div class="item-header"><h3>Pasta</h3><p>8.99</p></div>
+                    <div class="item-header"><h3>Pasta</h3><p>€8.99</p></div>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 </div>
                 <div class="menu">
-                    <div class="item-header"><h3>Pasta</h3><p>8.99</p></div>
+                    <div class="item-header"><h3>Pasta</h3><p>€8.99</p></div>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 </div>
                 <div class="menu">
-                    <div class="item-header"><h3>Pasta</h3><p>8.99</p></div>
+                    <div class="item-header"><h3>Pasta</h3><p>€8.99</p></div>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 </div>
                 <div class="menu">
-                    <div class="item-header"><h3>Pasta</h3><p>8.99</p></div>
+                    <div class="item-header"><h3>Pasta</h3><p>€8.99</p></div>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 </div>
                 <div class="menu">
-                    <div class="item-header"><h3>Pasta</h3><p>8.99</p></div>
+                    <div class="item-header"><h3>Pasta</h3><p>€8.99</p></div>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 </div>
                 <div class="menu">
-                    <div class="item-header"><h3>Pasta</h3><p>8.99</p></div>
+                    <div class="item-header"><h3>Pasta</h3><p>€8.99</p></div>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 </div>
                 <div class="menu">
-                    <div class="item-header"><h3>Pasta</h3><p>8.99</p></div>
+                    <div class="item-header"><h3>Pasta</h3><p>€8.99</p></div>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 </div>
                 <div class="menu">
-                    <div class="item-header"><h3>Pasta</h3><p>8.99</p></div>
+                    <div class="item-header"><h3>Pasta</h3><p>€8.99</p></div>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 </div>
             </div>
