--- a/CSS/Eindopdracht/PortFolio/Portfolio.html
+++ b/CSS/Eindopdracht/PortFolio/Portfolio.html
@@ -35,8 +35,8 @@
                 <div class="profiel-foto"><img src="./img/elmer.jpeg" alt="elmer"></div>
                 <h3>Elmer Volgers</h3>
                 <p style="line-height: 1px;"><a href="#">@Elmerrrrrr</a></p>
-                <p><blockquote>"Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Quam nam, minima porro similique quibusdam tempora ipsa cupiditate"</blockquote></p>
+                <p class="quote">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Quam nam, minima porro similique quibusdam tempora ipsa cupiditate"</p>
                 <hr>
                 <p class="social-bar"><i class="far fa-thumbs-up"> +1000</i><i class="far fa-heart"> +999</i><i class="far fa-thumbs-down"> 0</i></p> 
             </div>
