--- a/CSS/Eindopdracht/PortFolio/Members.html
+++ b/CSS/Eindopdracht/PortFolio/Members.html
@@ -16,13 +16,14 @@
         <label for="check" class="checkbtn"><i class="fas fa-bars"></i></label>
         <ul>
             <li>Menu</li>
-            <li><a href="./Portfolio.html">Dashboard</a></li>
-            <li><a href="#">User Profile</a></li>
-            <li><a class="active" href="./Members.html">Members</a></li>
-            <li><a href="#">Assignments</a></li>
-            <li><a href="#">Blogs</a></li>
+            <li><a href="#"><i class="fas fa-pager"></i></i> Dashboard</a></li>
+            <li><a href="#"><i class="far fa-user"></i> User Profile</a></li>
+            <li><a class="active" href="./Members.html"><i class="fas fa-users"></i> Members</a></li>
+            <li><a href="#"><i class="fas fa-folder-open"></i> Assignments</a></li>
+            <li><a href="#"><i class="far fa-file"></i> Blogs</a></li>
+            <li><label for="check" class="close"><i class="far fa-times-circle"></i></label></li>
         </ul>
-      </nav>
+    </nav>
 
     <main>
       <h1>Members</h1>
