--- a/CSS/Eindopdracht/PortFolio/Members.html
+++ b/CSS/Eindopdracht/PortFolio/Members.html
@@ -16,7 +16,7 @@
         <label for="check" class="checkbtn"><i class="fas fa-bars"></i></label>
         <ul>
             <li>Menu</li>
-            <li><a href="#"><i class="fas fa-pager"></i></i> Dashboard</a></li>
+            <li><a href="./Portfolio.html"><i class="fas fa-pager"></i></i> Dashboard</a></li>
             <li><a href="#"><i class="far fa-user"></i> User Profile</a></li>
             <li><a class="active" href="./Members.html"><i class="fas fa-users"></i> Members</a></li>
             <li><a href="#"><i class="fas fa-folder-open"></i> Assignments</a></li>
