--- a/Bootstrap/bootstrap_opdr.5.html
+++ b/Bootstrap/bootstrap_opdr.5.html
@@ -17,11 +17,10 @@
 
     <div class="container-fluid my-10 w-90 ">
 
-      <div class="row m-10">
-        <div class="d-flex flex-wrap bd-highlight w-100">
-          <div class="p-2 flex-grow-1 w-30 bg-white">Flex item</div>
-          <div class="p-2 flex-grow-1 w-20 bd-highlight bg-warning">Flex item</div>
-          <div class="p-2 flex-grow-1 w-50 bd-highlight bg-danger">Third flex item</div>
+      <div class="row">
+          <div class="col-md-3 w-75 p-2   bg-white">Flex item</div>
+          <div class="col-md-6 w-50 p-2 bg-warning">Flex item</div>
+          <div class="col-md-3 w-75 p-2   bg-danger">Third flex item</div>
         </div>
 
       </div>
