--- a/Bootstrap/bootstrap_opdr.6.html
+++ b/Bootstrap/bootstrap_opdr.6.html
@@ -18,14 +18,14 @@
     <div class="container-fluid my-10 w-90 ">
 
         <div class="row w-60">
-            <div class="col-sm-12 flex-grow-1 col-md-6 col-lg-4 col-xl-2">
+            <div class="col-sm-12 flex-grow-1 col-md-6 col-lg-4 col-xl-2 bg-secondary">
               nested col
             </div>
-            <div class="col-sm-12 flex-grow-2 col-md-6 col-lg-4 col-xl-2">
+            <div class="col-sm-12 flex-grow-2 col-md-6 col-lg-4 col-xl-2 bg-warning">
               nested col
             </div>
 
-            <div class="col">one of two columns</div><div class="col"></div>
+            <div class="col-sm-3 offset-sm-2 bg-danger">one of two columns</div><div class="col"></div>
 
 
         </div>
