--- a/Bootstrap/bootstrap_opdr.6.html
+++ b/Bootstrap/bootstrap_opdr.6.html
@@ -25,7 +25,7 @@
               nested col
             </div>
 
-            <div class="col-sm-3 offset-sm-2 bg-danger">one of two columns</div><div class="col"></div>
+            <div class="col-sm-3 offset-sm- bg-danger">one of two columns</div><div class="col"></div>
 
 
         </div>
