--- a/JavaScript/1.variables.html
+++ b/JavaScript/1.variables.html
@@ -5,13 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript - Variables</title>
     <style>
-        html{
-            background: cornsilk;
-        }
+        html{background: cornsilk;}
+
         h1{
             text-align: center;
             color:darkcyan;
-
         }
 
         h4{
@@ -20,9 +18,7 @@
             color:darkcyan;
         }
 
-        dt{
-            font-weight: bold;
-        }
+        dt{font-weight: bold;}
 
     </style>
 
@@ -301,8 +297,8 @@
         console.log(combinedText);
 
         // Opdracht14
-        // alert("It's \"game\" time.");
-        // alert('It\'s "game" time.');
+        console.log("It's \"game\" time.");
+        console.log('It\'s "game" time.');
 
         //Opdracht15
         let text = "text";
