--- a/JavaScript/test.html
+++ b/JavaScript/test.html
@@ -28,7 +28,11 @@
         break;
     case number>10:
              console.log('case 4');
-        break;                  
+        break;   
+        console.log('');
+        console.log();
+        
+                       
 }
 
     </script>
