--- a/JavaScript/4.scopes.html
+++ b/JavaScript/4.scopes.html
@@ -40,7 +40,7 @@
     </pre>
 </dt>
 <dd>//Uncaught ReferenceError: carBrand is not defined. Dit komt omdat de variabele in een block scope
-    is gedeclareerd. Dus niet toegangkelijk buiten de functie.
+    is gedeclareerd. Dus niet toegangkelijk buiten de functie. De functie is daarnaast ook niet gestart.
 </dd>
 <br>
 
@@ -101,10 +101,11 @@
 
 <script>
 //Opdracht1
-    // function printCar() {
-    //     const carBrand = "Volvo";
-    // }
-    // console.log(carBrand);
+    function printCar() {
+       carBrand = "Volvo";
+    }
+    printCar()
+    console.log(carBrand);
 
 
 //Opdracht2
@@ -126,17 +127,17 @@
 
 
 //Opdracht4
-function printCar() {
-           carBrand = "Volvo";
+// function printCar() {
+//            carBrand = "Volvo";
  
-           return function(type) {
-               console.log(carBrand + " " + type); // carBrand is hier toegangkelijk (Lexical Scope)
-           }
-       }
+//            return function(type) {
+//                console.log(carBrand + " " + type); // carBrand is hier toegangkelijk (Lexical Scope)
+//            }
+//        }
  
-       const car = printCar();
-       console.log(car);
-       car("v40");
+//        const car = printCar();
+//        console.log(car);
+//        car("v40");
 
 </script>
 
