--- a/JavaScript/test.html
+++ b/JavaScript/test.html
@@ -10,25 +10,42 @@
 
     <script>
 
-        let number = 6;
+//         let number = 6;
 
-        switch (true) {
-    case number == 0:
-            console.log('case 1');
-        break;
-    case number<=5 && number>0:
-            console.log('case 2');
-        break;
-    case number<=10 && number>5:
-            console.log('case 3');
-        break;
-    case number>10:
-             console.log('case 4');
-        break;   
-        console.log('');
-        console.log();
+//         switch (true) {
+//     case number == 0:
+//             console.log('case 1');
+//         break;
+//     case number<=5 && number>0:
+//             console.log('case 2');
+//         break;
+//     case number<=10 && number>5:
+//             console.log('case 3');
+//         break;
+//     case number>10:
+//              console.log('case 4');
+//         break;   
+//         console.log('');
+//         console.log();
                        
+// }
+
+
+
+
+// 7 in the array? then print BOOOOM!
+function sevenBoom(arr) {
+    for(let i = 0; i < arr.length; i++) {
+        let elementAgain = arr[i];
+        let includes_seven = /7/;
+
+        if(elementAgain == includes_seven) {
+            return "BOOOOM!";
+        } else text = "There is no 7 in the array!"
+    }
+    return text;
 }
+console.log(sevenBoom([1, 3, 5, 9, 23, 7]));
 
     </script>
 </body>
