--- a/JavaScript/7.rock-paper-scissor.html
+++ b/JavaScript/7.rock-paper-scissor.html
@@ -96,6 +96,7 @@
             font-weight: bold;
             box-shadow: 4px 4px 4px grey;
             transition: 0.2s ease-in-out;
+            cursor: pointer;
 
         }
         button:hover, button:focus {
@@ -148,6 +149,7 @@
             border: none;
             border-radius: 20px;
             box-shadow: 0px 0px 10px;
+            cursor: pointer;
         }
         #btn-change:hover, #btn-change:focus {
         outline: none;
@@ -203,7 +205,7 @@
 let playerScore = 0;
 let computerScore = 0;
 
-//  console.log(document.documentElement);
+//  console.log(Math.floor(Math.random()*7));
 //  document.documentElement.style.color = 'white';
 
 
