--- a/JavaScript/Eindopdracht/calculator.html
+++ b/JavaScript/Eindopdracht/calculator.html
@@ -206,6 +206,7 @@ html, body{
         storeInputNumbers1.push(inputValue);
         firstNumber = parseFloat(storeInputNumbers1.join(''));
         display.value = storeInputNumbers1.join('');
+        console.log(firstNumber);
         }
 
         //Start filling array 2 for entering second number
