--- a/JavaScript/6.loops&iterators.html
+++ b/JavaScript/6.loops&iterators.html
@@ -274,23 +274,23 @@
 
 //Opdracht7
 
-    // let i=0;
-    // while(i<2){
-    //     console.log(1,2,3,4,5,6,7,8,9,10);
-    //     i++;
+    let i=0;
+    while(i<2){
+        console.log(1,2,3,4,5,6,7,8,9,10);
+        i++;
 
-    //     for(j=0; j<10; j++){ 
+        for(j=0; j<10; j++){ 
             
-    //         while(i==2){
-    //         console.log(2,4,6,8,10,12,14,16,18,20);
-    //         i++;
-    //         }
-    //         while(i==3){
-    //         console.log(3,6,9,12,15,18,21,24,27,30);
-    //         i++;
-    //         }
-    //     }
-    // }
+            while(i==2){
+            console.log(2,4,6,8,10,12,14,16,18,20);
+            i++;
+            }
+            while(i==3){
+            console.log(3,6,9,12,15,18,21,24,27,30);
+            i++;
+            }
+        }
+    }
            
 
 //Opdracht8
