--- a/JavaScript/Eindopdracht/Calculator/calculatorV2.html
+++ b/JavaScript/Eindopdracht/Calculator/calculatorV2.html
@@ -299,7 +299,7 @@ html, body{
         storeMathAction.push(mathAction);
         } 
 
-       // Store mathoperator in Calsum array
+       // Store mathoperator in calculateSum array
         operator = storeMathAction.pop();
         calculateSum.push(operator);
     }
@@ -310,8 +310,7 @@ html, body{
 
         let resultBtn = btnElement.innerText;
 
-
-
+        //Set special function on
         if (calculateSum[0]== '*' || calculateSum[0]== '/') {
             specialfunctions = true;
         }
@@ -342,13 +341,13 @@ html, body{
             //Check if number is an Interger number
             if (result %1 == 0) {
 
-                resultFinal = eval(calculateSum.join(''));
+                resultFinal = eval(result);
                 display.value = resultFinal;
             }    
             // Check if number is an float number
             else if (result %1 != 0){
 
-                resultFinal = eval(calculateSum.join('')).toPrecision(2);
+                resultFinal = eval(result).toFixed(2);
                 display.value = resultFinal;
             }
         }
