--- a/React/portfolio-elmer-v2/public/index.html
+++ b/React/portfolio-elmer-v2/public/index.html
@@ -19,6 +19,6 @@
     <div id="root"></div>
     
     <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
-    <script scr='./background.js'></script> 
+    <!-- <script scr='./background.js'></script>  -->
   </body>
 </html>
