--- a/Node.js/portfolio-elmerrr/src/index.html
+++ b/Node.js/portfolio-elmerrr/src/index.html
@@ -6,13 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
+    <title>Elmerrr | Developer</title>
 
-    <title>[Elmerrrrrr] | Developer</title>
-
-    <meta name="keywords" content="[Elmerrrrrr], [Elmer], Software Development" />
-
-    <meta name="description" content="[Elmerrrrrr] | Developer" />
-
+    <meta name="keywords" content="Elmerrr Elmer, Software Development" />
+    <meta name="description" content="Elmerrr | Developer" />
 
     <link
       rel="stylesheet"
@@ -23,11 +20,8 @@
       ScrollReveal({ reset: false });
     </script>
 
-    <!-- Remove this script after setup-->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
 
-  <!-- Follow the HTML instructions to create your stunning portfolio website -->
   <body>
     <div id="top"></div>
 
@@ -37,7 +31,7 @@
         <h1 class="hero-title" class="load-hidden">
           Hi, my name is <span class="text-color-main">Dev Elmer</span>
           <br />
-          Software Development.
+          I'm a Software Developer.
         </h1>
         <p class="hero-cta" class="load-hidden">
           <a class="cta-btn cta-btn--hero" href="#about">Read more</a>
@@ -210,13 +204,13 @@
         </h2>
         <div class="contact-wrapper">
           <p class="contact-wrapper__text">
-            [Put your call to action here]
+            Let's get in touch!
           </p>
           <a
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:elmer.volgers@gmail.com"
+            >Email me</a
           >
         </div>
       </div>
@@ -231,13 +225,13 @@
           <a href="#!" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <!-- <a href="#" target="_blank">
             <i class="fa fa-codepen fa-inverse"></i>
-          </a>
-          <a href="#!" target="_blank">
+          </a> -->
+          <a href="https://nl.linkedin.com/in/elmer-volgers-67729614a" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="https://github.com/Elmerrrrrr/" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -246,7 +240,7 @@
 
 
         <p class="footer__text">
-          © 2020 - Webdev Elmer <a href="https://github.com/Elmerrrrrr/ target="_blank">Elmer Volgers</a>
+          © 2020 - Webdev Elmer <a href="https://github.com/Elmerrrrrr/" target="_blank">Elmer Volgers</a>
           </a>
         </p>
 
